--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
         <div class="container-fluid">
             <div class="container">
                 <div class="row d-flex justify-content-center aling-item-center ">
-                <div class="left col-4  position-relative">
-<img src="images/my2.png" class="img-fluid position-absolute" height="100%" alt="">
+                <div class="left col-4">
+<img src="images/my2.png" class="" height="100%" width="100%" alt="" style="object-fit: cover;">
                 </div>
                 <div class="right col-8">
 <p style="font-size: 10px; margin-top: 10px;">MY INTRO</p>
