--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@ transform: translate(-50%, -50%);">95%</h2>
  <!------------------ Here our blog part start ----------------->   
 
 
-<div class="container mt-5 mb-5">
+<div class="container mt-5 mb-5" id="blog" >
 
 
     <div class="top-heading mb-5">
@@ -557,7 +557,7 @@ transform: translate(-50%, -50%);">95%</h2>
 
 
 
-    <section id="contact mt-5" class="contact" style="min-height: 100%; height: auto; width: 100%;">
+    <section id="contact" class="contact mt-5" style="min-height: 100%; height: auto; width: 100%;">
         <div class="container ">
             <div class="row  d-flex flex-column justify-content-center aling-item-center">
                 <div class="top-heading mb-5">
@@ -637,6 +637,23 @@ transform: translate(-50%, -50%);">95%</h2>
         </div>
     </section>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!------------------ Here our footer start ----------------->
+    
 
     <!------------------ Here we have gsap animation cdn links ----------------->
 
