--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <!------------------ Here our css file main ----------------->
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="responsive.css">
+
+    <!------------------ link for animation ----------------->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 
 <body>
@@ -29,13 +32,13 @@
         <div class="container ">
             <nav class="navbar navbar-expand-lg ">
                 <div class="container-fluid">
-                    <a class="navbar-brand col-6" href="#">PAW<span style="color: #EC5325">AN BAFI</span>LA</a>
+                    <a data-aos="fade-in" class="navbar-brand col-6" href="#">PAW<span style="color: #EC5325">AN BAFI</span>LA</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div class="collapse navbar-collapse col-6 " id="navbarSupportedContent">
+                    <div data-aos="slide-down" class="collapse navbar-collapse col-6 " id="navbarSupportedContent">
                         <ul class="navbar-nav mx-auto mb-2 mb-lg-0 ">
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="#">HOME</a>
@@ -71,9 +74,9 @@
             <div class="row main banner-text-img">
 
                 <div class="col-8  main-heading d-flex aling-item-center justify-content-center flex-column">
-                    <p style="color:#EC5325;" class="banner-p">WE DESIGN & BUILD BRANDS</p>
+                    <p style="color:#EC5325;" class="banner-p" data-aos="fade-left">WE DESIGN & BUILD BRANDS</p>
 
-                    <h1 class="banner-h">Hi, I am <span style="color: #928B8F; font-weight: bolder;">Bafila</span> This
+                    <h1 class="banner-h" data-aos="slide-right">Hi, I am <span style="color: #928B8F; font-weight: bolder;">Bafila</span> This
                         is my favorite work.</h1>
 
                 </div>
@@ -83,7 +86,7 @@
 
                     </div>
                     <img src="images/my1.png" alt="" class="position-absolute banner-img1" height="100%"
-                        style="bottom: 0;">
+                        style="bottom: 0;" >
 
 
                 </div>
@@ -112,25 +115,25 @@
             <div class="container">
                 <div class="row d-flex justify-content-center aling-item-center ">
                     <div class="left col-4">
-                        <img src="images/my2.png" class="" height="100%" width="100%" alt="" style="object-fit: cover;">
+                        <img data-aos="zoom-in" src="images/my2.png" class="" height="100%" width="100%" alt="" style="object-fit: cover;">
                     </div>
                     <div class="right col-8">
-                        <p style="font-size: 10px; margin-top: 10px;">MY INTRO</p>
-                        <h2>About Me</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam fuga earum consequuntur amet
+                        <p style="font-size: 10px; margin-top: 10px;" data-aos="zoom">MY INTRO</p>
+                        <h2 data-aos="fade-right">About Me</h2>
+                        <p data-aos="fade-left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam fuga earum consequuntur amet
                             voluptates soluta blanditiis? Sequi perferendis repellat ut nemo? Quae nobis est laborum
                             ipsam. Deserunt consectetur consequuntur illo, temporibus animi autem quibusdam corporis
                             omnis illum ipsam voluptas ullam? Blanditiis accusamus reprehenderit vitae nemo iusto, saepe
                             voluptatibus suscipit quibusdam.</p>
 
-                        <table>
+                        <table data-aos="zoom-in">
                             <tr>
                                 <th>Name:</th>
                                 <td>Pawan Bafila</td>
                             </tr>
                             <tr>
                                 <th>Date of birth:</th>
-                                <td>Berinag Utrakhand</td>
+                                <td>7 july 2000</td>
                             </tr>
                             <tr>
                                 <th>Address:</th>
@@ -175,14 +178,14 @@
         <div class="container ">
             <div class="row  d-flex flex-column justify-content-center aling-item-center">
                 <div class="top-heading mb-5">
-                    <p class="text-center">SKILLS</p>
-                    <h2 class="text-center" id="skills" style="color: #EC5325;">My Skills</h2>
-                    <p class="text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis,
+                    <p class="text-center" data-aos="fade-left">SKILLS</p>
+                    <h2 class="text-center" id="skills" style="color: #EC5325;" data-aos="fade-left">My Skills</h2>
+                    <p class="text-center" data-aos="fade-right">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis,
                         cupiditate.</p>
                 </div>
-                <div class="sec-work">
+                <div class="sec-work" >
                     <div class="row d-flex justify-content-evenly">
-                        <div class="col-lg-4 mb-4">
+                        <div class="col-lg-4 mb-4" data-aos="fade-right">
                             <div class="bg-white rounded-lg shadow p-4">
                                 <h2 class="h5 font-weight-bold text-center mb-4">CSS</h2>
 
@@ -661,7 +664,7 @@ transform: translate(-50%, -50%);">95%</h2>
 
 
 
-    <div class="container-fluid bg-warning-subtle text-white">
+    <div class="container-fluid text-white" style="background-color: #e0e0e0;">
         <div class="container">
 
             <footer
@@ -780,11 +783,11 @@ transform: translate(-50%, -50%);">95%</h2>
         </footer>
     </div>
     </div>
-    <div class="container-fluid bg-black">
+    <div class="container-fluid" style="background-color: #EC5325;">
         <div class="container">
             <div class="d-flex flex-column flex-sm-row justify-content-center pt-2  ">
                 <p class="text-white">© 2024 Company, Inc. All rights reserved | Webdesing By <span
-                        class="text-warning">Pawan Bafila</span> </p>
+                        class="text-black">Pawan Bafila</span> </p>
 
             </div>
 
@@ -822,6 +825,14 @@ transform: translate(-50%, -50%);">95%</h2>
 
             <!------------------ Here our main js ----------------->
             <script src="script.js"></script>
-</body>
+
+            <!------------------ Here our animation js ----------------->
+            <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+            <script>
+              AOS.init({offset: 190,
+                duration:1000,
+            });
+            </script>
+        </body>
 
 </html>
