--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="container ">
             <nav class="navbar navbar-expand-lg ">
                 <div class="container-fluid">
-                    <a data-aos="fade-in" class="navbar-brand col-6" href="#">PAW<span style="color: #EC5325">AN BAFI</span>LA</a>
+                    <a data-aos="zoom-in" class="navbar-brand col-6" href="#">PAW<span style="color: #EC5325">AN BAFI</span>LA</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -74,9 +74,9 @@
             <div class="row main banner-text-img">
 
                 <div class="col-8  main-heading d-flex aling-item-center justify-content-center flex-column">
-                    <p style="color:#EC5325;" class="banner-p" data-aos="fade-left">WE DESIGN & BUILD BRANDS</p>
+                    <p style="color:#EC5325;" class="banner-p" data-aos="zoom-in">WE DESIGN & BUILD BRANDS</p>
 
-                    <h1 class="banner-h" data-aos="slide-right">Hi, I am <span style="color: #928B8F; font-weight: bolder;">Bafila</span> This
+                    <h1 class="banner-h" data-aos="zoom-in">Hi, I am <span style="color: #928B8F; font-weight: bolder;">Bafila</span> This
                         is my favorite work.</h1>
 
                 </div>
@@ -86,7 +86,7 @@
 
                     </div>
                     <img src="images/my1.png" alt="" class="position-absolute banner-img1" height="100%"
-                        style="bottom: 0;" >
+                        style="bottom: 0;" data-aos="flip-left" >
 
 
                 </div>
@@ -94,7 +94,7 @@
         </div>
     </main>
 
-
+                                  
 
 
 
@@ -118,9 +118,9 @@
                         <img data-aos="zoom-in" src="images/my2.png" class="" height="100%" width="100%" alt="" style="object-fit: cover;">
                     </div>
                     <div class="right col-8">
-                        <p style="font-size: 10px; margin-top: 10px;" data-aos="zoom">MY INTRO</p>
-                        <h2 data-aos="fade-right">About Me</h2>
-                        <p data-aos="fade-left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam fuga earum consequuntur amet
+                        <p style="font-size: 10px; margin-top: 10px;" data-aos="zoom-in">MY INTRO</p>
+                        <h2 data-aos="zoom-in">About Me</h2>
+                        <p data-aos="zoom-in">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam fuga earum consequuntur amet
                             voluptates soluta blanditiis? Sequi perferendis repellat ut nemo? Quae nobis est laborum
                             ipsam. Deserunt consectetur consequuntur illo, temporibus animi autem quibusdam corporis
                             omnis illum ipsam voluptas ullam? Blanditiis accusamus reprehenderit vitae nemo iusto, saepe
@@ -178,19 +178,19 @@
         <div class="container ">
             <div class="row  d-flex flex-column justify-content-center aling-item-center">
                 <div class="top-heading mb-5">
-                    <p class="text-center" data-aos="fade-left">SKILLS</p>
-                    <h2 class="text-center" id="skills" style="color: #EC5325;" data-aos="fade-left">My Skills</h2>
-                    <p class="text-center" data-aos="fade-right">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis,
+                    <p class="text-center" data-aos="zoom-in">SKILLS</p>
+                    <h2 class="text-center" id="skills" style="color: #EC5325;" data-aos="zoom-in">My Skills</h2>
+                    <p class="text-center" data-aos="zoom-in">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis,
                         cupiditate.</p>
                 </div>
                 <div class="sec-work" >
                     <div class="row d-flex justify-content-evenly">
-                        <div class="col-lg-4 mb-4" data-aos="fade-right">
+                        <div class="col-lg-4 mb-4" data-aos="zoom-in-up">
                             <div class="bg-white rounded-lg shadow p-4">
                                 <h2 class="h5 font-weight-bold text-center mb-4">CSS</h2>
 
                                 <div class="growth d-flex justify-content-center">
-                                    <div class="round d-flex justify-content-center aling-item-center"
+                                    <div class="round d-flex justify-content-center aling-item-center" 
                                         style="height: 200px; width: 200px; border: solid 5px 0px; border-radius: 50%; position: relative; ">
                                         <h2 style="z-index: 2; position: absolute;   top: 50%;
 left: 50%;
@@ -203,7 +203,7 @@ transform: translate(-50%, -50%);">95%</h2>
                                     <div class="col-6 border-right">
                                         <div class="h4 font-weight-bold mb-0">28%</div><span
                                             class="small text-gray">Last week</span>
-                                    </div>
+                                    </div>   
                                     <div class="col-6">
                                         <div class="h4 font-weight-bold mb-0">60%</div><span
                                             class="small text-gray">Last month</span>
@@ -214,7 +214,7 @@ transform: translate(-50%, -50%);">95%</h2>
                         </div>
 
                         <div class="col-lg-4 mb-4">
-                            <div class="bg-white rounded-lg shadow p-4">
+                            <div class="bg-white rounded-lg shadow p-4"  data-aos="zoom-in-up">
                                 <h2 class="h5 font-weight-bold text-center mb-4">HTML</h2>
 
                                 <div class="growth d-flex justify-content-center">
@@ -227,7 +227,7 @@ transform: translate(-50%, -50%);">95%</h2>
 
                                 </div>
                                 <div class="row text-center mt-4">
-                                    <div class="col-6 border-right">
+                                    <div class="col-6 border-right"  >
                                         <div class="h4 font-weight-bold mb-0">8%</div><span class="small text-gray">Last
                                             week</span>
                                     </div>
@@ -240,7 +240,7 @@ transform: translate(-50%, -50%);">95%</h2>
                             </div>
                         </div>
                         <div class="col-lg-4 mb-4">
-                            <div class="bg-white rounded-lg shadow p-4">
+                            <div class="bg-white rounded-lg shadow p-4" data-aos="zoom-in-up">
                                 <h2 class="h5 font-weight-bold text-center mb-4">JAVASCRIPT</h2>
 
                                 <div class="growth d-flex justify-content-center">
@@ -268,7 +268,7 @@ transform: translate(-50%, -50%);">95%</h2>
                         </div>
                         <div class="row">
                             <div class="col-lg-4 mb-4">
-                                <div class="bg-white rounded-lg shadow p-4">
+                                <div class="bg-white rounded-lg shadow p-4" data-aos="zoom-in-up">
                                     <h2 class="h5 font-weight-bold text-center mb-4">GIT & GITHUB</h2>
 
                                     <div class="growth d-flex justify-content-center">
@@ -295,7 +295,7 @@ transform: translate(-50%, -50%);">95%</h2>
                                 </div>
                             </div>
                             <div class="col-lg-4 mb-4">
-                                <div class="bg-white rounded-lg shadow p-4">
+                                <div class="bg-white rounded-lg shadow p-4" data-aos="zoom-in-up">
                                     <h2 class="h5 font-weight-bold text-center mb-4">BOOTSTRAP</h2>
 
                                     <div class="growth d-flex justify-content-center">
@@ -323,7 +323,7 @@ transform: translate(-50%, -50%);">95%</h2>
                             </div>
 
                             <div class="col-lg-4 mb-4">
-                                <div class="bg-white rounded-lg shadow p-4">
+                                <div class="bg-white rounded-lg shadow p-4" data-aos="zoom-in-up">
                                     <h2 class="h5 font-weight-bold text-center mb-4">PHOTOSHOP</h2>
 
                                     <div class="growth d-flex justify-content-center">
