add some animation

--- a/index.html
+++ b/index.html
@@ -369,14 +369,14 @@ transform: translate(-50%, -50%);">95%</h2>
 
 
         <div class="top-heading mb-5">
-            <p class="text-center mb-4" >BLOG</p>
-            <h2 class="text-center" id="skills" style="color: #EC5325;">Our Blog</h2>
-            <p class="text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis,
+            <p class="text-center mb-4" data-aos="zoom-in" >BLOG</p>
+            <h2 class="text-center" id="skills" style="color: #EC5325;" data-aos="zoom-in">Our Blog</h2>
+            <p class="text-center" data-aos="slide-right">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis,
                 cupiditate.</p>
         </div>
 
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6" data-aos="zoom-in-up">
                 <div
                     class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                     <img class="img-fluid" src="images/blogthum4.png" alt="" width="100%" height="100%">
@@ -392,7 +392,7 @@ transform: translate(-50%, -50%);">95%</h2>
                     </div>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6" data-aos="zoom-in-up">
                 <div
                     class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                     <img class="img-fluid" src="images/blogthum5.jpg" alt="" width="100%" height="100%">
@@ -414,7 +414,7 @@ transform: translate(-50%, -50%);">95%</h2>
                     </div>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6" data-aos="zoom-in-up">
                 <div
                     class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                     
@@ -437,7 +437,7 @@ transform: translate(-50%, -50%);">95%</h2>
                     </div>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6" data-aos="zoom-in-up">
                 <div
                     class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                     <div class="blogimgbox">
@@ -474,15 +474,15 @@ transform: translate(-50%, -50%);">95%</h2>
         <div class="container">
             <div class="row  d-flex flex-column justify-content-center aling-item-center">
                 <div class="top-heading mb-5">
-                    <p class="text-center">ACCOMPLISHMENTS</p>
-                    <h2 class="text-center" id="skills" style="color: #EC5325;">Our Projects</h2>
-                    <p class="text-center mt-4">Far far away, behind the word mountains, far from the countries Vokalia
+                    <p class="text-center" data-aos="zoom-in">ACCOMPLISHMENTS</p>
+                    <h2 class="text-center" id="skills" style="color: #EC5325;" data-aos="slide-right">Our Projects</h2>
+                    <p class="text-center mt-4" data-aos="slide-down">Far far away, behind the word mountains, far from the countries Vokalia
                         and Consonantia</p>
                 </div>
             </div>
-            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 g-3">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 g-3" >
 
-                <div class="col">
+                <div class="col" data-aos="zoom-in-up">
                     <div class="card shadow-sm">
                        <img src="images/blogthum1.jpg" alt="">
                         <div class="card-body">
@@ -502,7 +502,7 @@ transform: translate(-50%, -50%);">95%</h2>
 
 
 
-                <div class="col">
+                <div class="col" data-aos="zoom-in-up">
                     <div class="card shadow-sm">
                         <img src="images/tem2.jpg" alt="">
                         <div class="card-body">
@@ -518,7 +518,7 @@ transform: translate(-50%, -50%);">95%</h2>
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col" data-aos="zoom-in-up">
                     <div class="card shadow-sm">
                         <img src="images/tem3.webp" alt="">
                         <div class="card-body">
@@ -534,7 +534,7 @@ transform: translate(-50%, -50%);">95%</h2>
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col" data-aos="zoom-in-up">
                     <div class="card shadow-sm">
                         <img src="images/tem4.jpg" alt="">
                         <div class="card-body">
@@ -584,9 +584,9 @@ transform: translate(-50%, -50%);">95%</h2>
         <div class="container ">
             <div class="row  d-flex flex-column justify-content-center aling-item-center">
                 <div class="top-heading mb-5">
-                    <p class="text-center">CONTACT US</p>
-                    <h2 class="text-center" id="skills" style="color: #EC5325;">Have a Project?</h2>
-                    <p class="text-center mt-4">Far far away, behind the word mountains, far from the countries Vokalia
+                    <p class="text-center" data-aos="zoom-in">CONTACT US</p>
+                    <h2 class="text-center" id="skills" style="color: #EC5325;" data-aos="zoom-in">Have a Project?</h2>
+                    <p class="text-center mt-4" data-aos="slide-right">Far far away, behind the word mountains, far from the countries Vokalia
                         and Consonantia</p>
                 </div>
             </div>
